2011-04-14  Stefan Monnier  <monnier@iro.umontreal.ca>

	* minibuffer.el (completion-in-region-mode-predicate)
	(completion-in-region-mode--predicate): New vars.
	(completion-in-region, completion-in-region--postch)
	(completion-in-region-mode): Use them.
	(completion--capf-wrapper): Also return the hook function.
	(completion-at-point, completion-help-at-point):
	Adjust and provide a predicate.

	Preserve arg names for advice of subr and lexical functions (bug#8457).
	* help-fns.el (help-function-arglist): Consolidate the subr and
	new-byte-code cases.  Add argument `preserve-names' to extract names
	from the docstring when needed.
	* emacs-lisp/advice.el (ad-define-subr-args, ad-undefine-subr-args)
	(ad-subr-args-defined-p, ad-get-subr-args, ad-subr-arglist): Remove.
	(ad-arglist): Use help-function-arglist's new arg.
	(ad-definition-type): Use cond.

2011-04-13  Juanma Barranquero  <lekktu@gmail.com>

	* autorevert.el (auto-revert-handler):
	Bind `remote-file-name-inhibit-cache', not `tramp-cache-inhibit-cache',
	which was removed in revno:101730 (2010-10-02).
	Don't quote lambda.

	* image-mode.el (image-transform-set-scale):
	Fix change in revno:103877 (2011-04-09).

2011-04-12  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* net/network-stream.el (network-stream-open-starttls): Only do
	opportunistic STARTTLS upgrades if we have built-in gnutls support.
	Upgrades via gnutls-cli are too slow to be done opportunistically.

2011-04-12  Juanma Barranquero  <lekktu@gmail.com>

	* dframe.el (dframe-current-frame): Remove spurious quote.

2011-04-12  Glenn Morris  <rgm@gnu.org>

	* calendar/cal-tex.el (cal-tex-end-document):
	Try to automatically use latin1 input if needed.

	* calendar/cal-hebrew.el (diary-hebrew-rosh-hodesh):
	Don't try to cons a mark onto an empty element.

2011-04-12  Martin Rudalics  <rudalics@gmx.at>

	* window.el (adjust-window-trailing-edge): If WINDOW is a
	window-splits nil window, try to adjust it the Emacs 23 way.