@@ -1,3 +1,8 @@
+2011-04-14  Martin Rudalics  <rudalics@gmx.at>
+
+	* window.el (adjust-window-trailing-edge): Assign normal sizes
+	to the windows affected in window-splits nil case.
+
 2011-04-14  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* minibuffer.el (completion-in-region-mode-predicate)
